--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sudo-prompt",
+  "name": "@neuronsolution/sudo-prompt",
   "version": "9.2.1",
   "description": "Run a command using sudo, prompting the user with an OS dialog if necessary",
   "main": "index.js",
@@ -13,9 +13,10 @@
     "test.js",
     "test-concurrent.js"
   ],
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jorangreef/sudo-prompt.git"
+    "url": "git+https://github.com/neuronsolution/sudo-prompt.git"
   },
   "keywords": [
     "sudo",
@@ -34,8 +35,8 @@
   "author": "Joran Dirk Greef",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jorangreef/sudo-prompt/issues"
+    "url": "https://github.com/neuronsolution/sudo-prompt/issues"
   },
-  "homepage": "https://github.com/jorangreef/sudo-prompt#readme",
+  "homepage": "https://github.com/neuronsolution/sudo-prompt#readme",
   "scripts": {}
 }
